Fix sun appearing above footer with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    z-index: 10;
+    z-index: 200;
     margin: 0;
 }
 
